--- a/rr-payments-deployment.yaml
+++ b/rr-payments-deployment.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
       - name: rr-payments
-        image: rr-payments:latest
-        imagePullPolicy: Never
+        image: tylerpritchard/rr-payments:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8082      # Matches the port your Go server is listening on
         envFrom:
